--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="normalaize.css">
 </head>
 <body>
-    <h1>Portfolio</h1>
+    <!--Navbar-->
+    <section class="gl-top">
+        <div class="gl-nav">
+            <a class="gl-nav-logo" href="#home"><b>LoGo</b> Interiors</a>
+            <div class="gl-nav-items">
+             <a href="#project" class="gl-nav-item">project</a>
+             <a href="#about" class="gl-nav-item">about</a>
+             <a href="#contact" class="gl-nav-item">contact</a>
+            </div>
+        </div>
+    </section>
  </body>
 
 </html>
