--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <!--Navbar-->
     <section class="gl-top">
-        <div class="gl-nav">
-            <a class="gl-nav-logo" href="#home"><b>LoGo</b> Interiors</a>
+        <div class="gl-nav gl-padding gl-white">
+            <a class="gl-nav-logo gl-padding" href="#home"><b>LoGo</b> Interiors</a>
             <div class="gl-nav-items">
-             <a href="#project" class="gl-nav-item">project</a>
-             <a href="#about" class="gl-nav-item">about</a>
-             <a href="#contact" class="gl-nav-item">contact</a>
+             <a href="#project" class="gl-nav-item gl-padding">project</a>
+             <a href="#about" class="gl-nav-item gl-padding">about</a>
+             <a href="#contact" class="gl-nav-item gl-padding">contact</a>
             </div>
         </div>
     </section>
