--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
         <div class="gl-nav gl-padding gl-white">
             <a class="gl-nav-logo gl-padding" href="#home"><b>LoGo</b> Interiors</a>
             <div class="gl-nav-items">
-             <a href="#project" class="gl-nav-item gl-padding">project</a>
-             <a href="#about" class="gl-nav-item gl-padding">about</a>
-             <a href="#contact" class="gl-nav-item gl-padding">contact</a>
+              <a href="#project" class="gl-nav-item gl-padding">project</a>
+              <a href="#about" class="gl-nav-item gl-padding">about</a>
+              <a href="#contact" class="gl-nav-item gl-padding">contact</a>
             </div>
         </div>
     </section>
+    <header class="gl-hero" id="home">
+       <div class="gl-center">
+          <h1 class="gl-page-title gl-text-black"><span class="">LoGo</span> 
+          <span class="">Portfolio</span></h1>
+       </div>
+   </header>
+
  </body>
 
 </html>
