--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
             <div class="gl-grid gl-project">
                 <article>
-                  <div class="gl-display-container">
+                   <div class="gl-display-container">
                       <p class="gl-display-topleft gl-black gl-opacity-min gl-padding">Do it yourself</p>
                       <img class="gl-portfolio-img" src="immagini/diy-project-1.jpg" alt="diy project">
-                  </div>        
+                   </div>        
                   
                 </article>
 
@@ -85,6 +85,20 @@
 
             </div>
       </section>
+        <!--Sezione About-->
+         <section class="gl-container gl-padding-32" id="about">
+            <h2 class="gl-padding-16">About</h2>
+            <p>
+               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis illum perferendis repudiandae itaque incidunt vel eaque maxime, distinctio aut. At minus magni deserunt ex quaerat ratione itaque delectus tempore ullam?
+               Voluptates ut ullam esse officiis, at nostrum assumenda doloremque vero dolores fuga accusamus obcaecati nisi eligendi hic similique minus molestiae cupiditate totam.  Commodi et culpa dolores obcaecati magni dolorum neque?
+           </p>
+               Fuga doloremque soluta possimus rem repellendus adipisci necessitatibus officia voluptas, molestiae, accusamus ut dolorum itaque nam nihil perspiciatis nemo aut enim id sint illum dolore labore. Similique tenetur possimus non?
+               Dolore omnis totam voluptate corporis dolorem, sint nostrum officiis? Unde eum sapiente exercitationem in facilis vitae asperiores quasi amet quaerat officia vero, voluptatem neque libero architecto nihil ea nesciunt provident!
+            <p>
+               Adipisci a quo officiis quos repellendus rerum nesciunt. Soluta sed et dolor vitae numquam voluptates perferendis sapiente minima. Quia laudantium ab porro fugiat mollitia ipsa cum quasi quae cupiditate nihil!
+
+            </p>
+        </section>
   </main>
 
  </body>
