--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
 
             </p>
         </section>
+
+         <!--Sezione Contatti-->
+         <section>
+           <h2>Contact</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur quibusdam mollitia aspernatur, impedit perspiciatis nulla magnam provident dolorum saepe eius obcaecati, officia ipsa dolore iste. Pariatur, minus voluptate. Eveniet, voluptatum!</p>
+
+            <form action="">
+              
+            </form>
+
+        </section>
   </main>
 
  </body>
