--- a/index.html
+++ b/index.html
@@ -101,15 +101,80 @@
         </section>
 
          <!--Sezione Contatti-->
-         <section>
+         <section class="gl-container gl-padding-32" id="contact">
            <h2>Contact</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur quibusdam mollitia aspernatur, impedit perspiciatis nulla magnam provident dolorum saepe eius obcaecati, officia ipsa dolore iste. Pariatur, minus voluptate. Eveniet, voluptatum!</p>
 
-            <form action="">
-              
+            <form action="/action-page.php" target="_blank" method="post">
+               <input class="gl-input" type="text" placeholder="Name" name="Name" required>
+               <input class="gl-input" type="text" placeholder="Cognome" name="Cognome" required> 
+               <input class="gl-input" type="text" placeholder="Email" name="Email" required>
+               <input class="gl-input" type="text" placeholder="Oggetto del messaggio" name="Oggetto del messaggio" required>
+               <input class="gl-input" type="text" placeholder="Messaggio" name="Messaggio" required>              
+               <input class="gl-button gl-black" type="reset">
+               <button class="gl-button gl-black" tipe="submit">
+                  Invia messaggio
+               </button>
             </form>
+         </section>
 
-        </section>
+         <!--Sezione testimonial-->
+         <section class="gl-testimonial-grid gl-container-wide gl-padding-32">
+            <article class="gl-testimonial bg-primary">
+               <div class="flex">
+                  <div><img src="immagini/testimonial/testimonial-1.jpeg" alt="Raginhard Ràcz"></div>
+                  <div>
+                     <h2 class="name">Raginhard Ràcz</h2>
+                     <p class="position">Happy customer</p>
+                  </div>
+               </div>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>            
+           </article>
+
+           <article class="gl-testimonial bg-primary">
+               <div class="flex">
+                  <div><img src="" alt=""></div>
+                  <div>
+                     <h2 class="name">Raginhard Ràcz</h2>
+                     <p class="position">Happy customer</p>
+                  </div>
+               </div>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+            </article>
+             
+            <article class="gl-testimonial bg-primary">
+               <div class="flex">
+                  <div><img src="" alt=""></div>
+                  <div>
+                     <h2 class="name">Raginhard Ràcz</h2>
+                     <p class="position">Happy customer</p>
+                  </div>
+               </div>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+            </article>
+
+            <article class="gl-testimonial bg-primary">
+               <div class="flex">
+                  <div><img src="" alt=""></div>
+                  <div>
+                     <h2 class="name">Raginhard Ràcz</h2>
+                     <p class="position">Happy customer</p>
+                  </div>
+               </div>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+            </article>
+
+            <article class="gl-testimonial bg-primary">
+               <div class="flex">
+                  <div><img src="" alt=""></div>
+                  <div>
+                     <h2 class="name">Raginhard Ràcz</h2>
+                     <p class="position">Happy customer</p>
+                  </div>
+               </div>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+            </article>
+         </section>
   </main>
 
  </body>
