--- a/index.html
+++ b/index.html
@@ -131,48 +131,49 @@
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>            
            </article>
 
-           <article class="gl-testimonial bg-primary">
+           <article class="gl-testimonial bg-secondary">
                <div class="flex">
-                  <div><img src="" alt=""></div>
+                  <div><img src="immagini/testimonial/testimonial-2.jpeg" alt="Anna Rossi"></div>
                   <div>
-                     <h2 class="name">Raginhard Ràcz</h2>
+                     <h2 class="name">Anna Rossi</h2>
                      <p class="position">Happy customer</p>
                   </div>
                </div>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quo quis quas voluptatum eum alias obcaecati iusto optio voluptas minus nemo ad consectetur, cupiditate nam deleniti aliquid necessitatibus doloribus! Dolor.</p> <br>
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
             </article>
              
-            <article class="gl-testimonial bg-primary">
+            <article class="gl-testimonial bg-neutral">
                <div class="flex">
-                  <div><img src="" alt=""></div>
+                  <div><img src="immagini/testimonial/testimonial-4.jpeg" alt="Maria Bianchi"></div>
                   <div>
-                     <h2 class="name">Raginhard Ràcz</h2>
+                     <h2 class="name">Maria Bianchi</h2>
                      <p class="position">Happy customer</p>
                   </div>
                </div>
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
             </article>
 
-            <article class="gl-testimonial bg-primary">
+            <article class="gl-testimonial bg-neutral">
                <div class="flex">
-                  <div><img src="" alt=""></div>
+                  <div><img src="immagini/testimonial/testimonial-5.jpeg" alt="Elena Verdi"></div>
                   <div>
-                     <h2 class="name">Raginhard Ràcz</h2>
+                     <h2 class="name">Elena Verdi</h2>
                      <p class="position">Happy customer</p>
                   </div>
                </div>
                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
             </article>
 
-            <article class="gl-testimonial bg-primary">
+            <article class="gl-testimonial bg-secondary">
                <div class="flex">
-                  <div><img src="" alt=""></div>
+                  <div><img src="immagini/testimonial/testimonial-3.jpeg" alt="Luca Neri"></div>
                   <div>
-                     <h2 class="name">Raginhard Ràcz</h2>
+                     <h2 class="name">Luca Neri</h2>
                      <p class="position">Happy customer</p>
                   </div>
                </div>
-               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, perferendis. In dolorum consequuntur explicabo asperiores, aliquam odio, vero voluptate, itaque modi amet esse. Reiciendis adipisci, nobis iusto praesentium autem molestiae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, praesentium nemo dolorem suscipit laudantium reprehenderit corrupti? Tempore aliquid aperiam saepe. Dolore ex incidunt quas reiciendis perspiciatis nostrum repellat repellendus aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, aspernatur? Velit autem repellat, voluptas nostrum iste consequuntur in dignissimos consectetur culpa voluptates rerum necessitatibus. Sit voluptatum neque soluta quo nesciunt!</p>
             </article>
          </section>
   </main>
