--- a/index.html
+++ b/index.html
@@ -177,6 +177,16 @@
             </article>
          </section>
   </main>
+   <div>
+    
+  <div class="gl-map gl-padding-top-32">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126907.55483390967!2d12.499624209256917!3d41.870511091405525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132f6196f9928ebb%3A0xb90f770693656e38!2sRoma%20RM!5e0!3m2!1sit!2sit!4v1717517217851!5m2!1sit!2sit" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+   <footer class="gl-black">
+       <div class="gl-center">
+         <p>Deigned by <a>Plan B project</a>, Images from <a>Pexels</a> e <a>Unsplash</a></p>
+       </div>
+   </footer>
 
  </body>
 
