--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   </div>
    <footer class="gl-black">
        <div class="gl-center">
-         <p>Deigned by <a>Plan B project</a>, Images from <a>Pexels</a> e <a>Unsplash</a></p>
+         <p>Deigned by <a href="https://planbproject.it" title="website" target="_blank">Plan B project</a>, Images from <a href="https://pexels.com" target="_blank">Pexels</a> e <a href="https://unsplash.com" target="_blank">Unsplash</a></p>
        </div>
    </footer>
 
