--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
                      <p class="position">Happy customer</p>
                   </div>
                </div>
-               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>            
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsum ullam repudiandae, nesciunt ipsam tenetur facere in excepturi ad soluta ut incidunt culpa maxime enim alias autem suscipit fugiat voluptatem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat placeat molestiae nihil voluptates soluta repudiandae veniam cupiditate accusamus accusantium! Fuga adipisci necessitatibus consequatur beatae deleniti quam illo laboriosam dignissimos dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta perferendis explicabo eos ullam optio, odit inventore eveniet repudiandae odio, minima, totam itaque natus! A iure, repellendus earum aut voluptatem tenetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui sit, ipsam saepe fuga animi repellendus, adipisci, id libero officiis tenetur eum quidem soluta magni beatae! Quas reiciendis ipsam in hic.</p> <br>
+               Quasi, facilis autem maxime dolorum in impedit incidunt doloremque cum id, accusamus dolorem optio blanditiis, eos nostrum adipisci atque. Illo inventore odit quidem autem veniam nemo impedit minus aut. Accusamus?
+               Vero repellat maiores commodi laborum aspernatur, repudiandae amet consequuntur quas quos veniam quam cupiditate vitae accusamus et nulla facere, ipsa explicabo, dolores eum quia debitis natus. Labore placeat esse libero!
+               Dignissimos minima delectus nisi? Quae illo illum nihil modi libero ratione labore provident, nostrum quia assumenda enim vero corrupti veniam. Odio neque porro nesciunt maiores quasi distinctio error recusandae quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, dolorum temporibus rerum, totam enim quia ut neque fuga quod, dolor dolores voluptates libero quisquam architecto quidem autem id laboriosam iste.
+               Quasi similique temporibus minus laboriosam totam nam delectus qui! In dicta dolore incidunt rerum corrupti nesciunt animi eos recusandae, sit velit consequuntur ducimus voluptatibus saepe, totam quae accusantium cupiditate amet.</p>            
            </article>
 
            <article class="gl-testimonial bg-secondary">
@@ -140,7 +144,8 @@
                   </div>
                </div>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quo quis quas voluptatum eum alias obcaecati iusto optio voluptas minus nemo ad consectetur, cupiditate nam deleniti aliquid necessitatibus doloribus! Dolor.</p> <br>
-               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio veritatis voluptate ad perferendis nulla error perspiciatis pariatur dolorum, sapiente quasi optio suscipit fugiat, molestias delectus nihil amet sit molestiae repudiandae?
+               Beatae exercitationem quam amet iusto culpa enim illum alias, eum sit ex necessitatibus reprehenderit aspernatur at minus ullam sapiente nihil ab autem rem animi totam harum delectus eos! Suscipit, error. Lorem ipsum dolor sit amet consectetur adipisicing elit. In earum eligendi fugiat cupiditate consectetur. Earum excepturi temporibus itaque fugit porro voluptatum officia autem sed! Sunt natus quas nisi deserunt modi.</p>
             </article>
              
             <article class="gl-testimonial bg-neutral">
@@ -151,7 +156,7 @@
                      <p class="position">Happy customer</p>
                   </div>
                </div>
-               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum, sint. Tempora corrupti voluptatum facere similique illo qui nihil deleniti architecto sit! Nisi quas, quis molestiae illum consequatur laborum numquam officiis?</p>
             </article>
 
             <article class="gl-testimonial bg-neutral">
@@ -162,7 +167,7 @@
                      <p class="position">Happy customer</p>
                   </div>
                </div>
-               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem.</p>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque aut iure inventore, labore dolor, placeat amet praesentium autem in recusandae, explicabo quasi nostrum officia eaque quia fugit laboriosam. Natus, nihil? Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur corporis itaque sunt optio dolorum minus sint magni quidem voluptatum. Distinctio illum aliquid fuga quam, veritatis est dignissimos soluta porro numquam.</p>
             </article>
 
             <article class="gl-testimonial bg-secondary">
@@ -173,7 +178,12 @@
                      <p class="position">Happy customer</p>
                   </div>
                </div>
-               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, perferendis. In dolorum consequuntur explicabo asperiores, aliquam odio, vero voluptate, itaque modi amet esse. Reiciendis adipisci, nobis iusto praesentium autem molestiae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, praesentium nemo dolorem suscipit laudantium reprehenderit corrupti? Tempore aliquid aperiam saepe. Dolore ex incidunt quas reiciendis perspiciatis nostrum repellat repellendus aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, aspernatur? Velit autem repellat, voluptas nostrum iste consequuntur in dignissimos consectetur culpa voluptates rerum necessitatibus. Sit voluptatum neque soluta quo nesciunt!</p>
+               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci tempora deleniti, ipsum voluptate obcaecati consectetur debitis amet explicabo dignissimos iusto ducimus facere doloremque doloribus voluptas quidem, ab a maxime. Autem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, perferendis. In dolorum consequuntur explicabo asperiores, aliquam odio, vero voluptate, itaque modi amet esse. Reiciendis adipisci, nobis iusto praesentium autem molestiae. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, praesentium nemo dolorem suscipit laudantium reprehenderit corrupti? Tempore aliquid aperiam saepe. Dolore ex incidunt quas reiciendis perspiciatis nostrum repellat repellendus aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, aspernatur? Velit autem repellat, voluptas nostrum iste consequuntur in dignissimos consectetur culpa voluptates rerum necessitatibus. Sit voluptatum neque soluta quo nesciunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum in reiciendis facere, doloribus exercitationem nobis. Facere, laudantium molestias, culpa, aliquid ad consequuntur harum error consequatur odio quasi quis sed.
+               Iusto sunt ab numquam recusandae labore non. Fugit, doloribus cupiditate? Sapiente saepe eligendi aliquid repellendus nobis excepturi esse dolorum reiciendis quis quidem, tenetur voluptatibus earum incidunt id cum, deserunt enim. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, dignissimos officia dolores quis sit vero impedit ipsa, molestiae rerum et maxime nemo culpa suscipit illo rem eius pariatur voluptates sint.
+               Exercitationem quam facere alias sapiente ipsum eligendi, earum repellendus nisi corrupti tenetur maiores omnis repudiandae officia deleniti, voluptatum, libero error. Corporis eaque enim quisquam numquam iste, odio vel ipsum culpa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nulla recusandae similique veritatis mollitia, sapiente quibusdam earum, vitae rerum corrupti ex porro. Minus tempore repellendus veritatis, accusamus labore at voluptatibus.
+               Fugit soluta delectus ea officia maxime magni, neque accusamus eum modi assumenda omnis consequuntur voluptates iste cupiditate inventore nemo! Laboriosam sint debitis error fugit architecto ipsa consectetur vero necessitatibus dolor?
+               Ipsam ex quae tempore adipisci laudantium molestias quasi neque cupiditate dicta officiis quia quas quis quod, magnam et facere cumque hic! Dolorum dolores qui ex! Praesentium alias corporis ea hic?
+               Dignissimos eum, animi ad quaerat quia, dicta, possimus consectetur facere aliquid ullam eligendi culpa! Dolores possimus optio laboriosam odit pariatur voluptates voluptatem, sunt voluptatibus quos beatae quo quam earum nulla.</p>
             </article>
          </section>
   </main>
